@@ -2,7 +2,6 @@ package no.nav.security.token.support.client.core.oauth2;
 
 import no.nav.security.token.support.client.core.http.OAuth2HttpClient;
 
-import java.util.Collections;
 import java.util.Map;
 
 public class ClientCredentialsTokenClient extends AbstractOAuth2TokenClient<ClientCredentialsGrantRequest> {
@@ -13,6 +12,6 @@ public class ClientCredentialsTokenClient extends AbstractOAuth2TokenClient<Clie
 
     @Override
     protected Map<String, String> formParameters(ClientCredentialsGrantRequest grantRequest) {
-        return Collections.emptyMap();
+        return Map.of();
     }
 }
